[package]
name = "stencil"
version = "0.1.0"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.2"
